--- a/index.html
+++ b/index.html
@@ -43,10 +43,9 @@
     <main>
         <section class="about">
             <a href="about.html">
-            <div class="main__mob"></div>
+                <div class="main__mob"></div>
+                <h2>About me</h2>
             </a>
-            <h2>About me</h2>
-
             <div class="about-me main__container">
                 <div class="about__ava main__logo"></div>
                 <div class="about__text main__text">
@@ -56,13 +55,12 @@
                     with you!
                 </div>
             </div>
-
         </section>
         <section class="skills">
             <a href="skills.html">
-            <div class="main__mob"></div>
+                <div class="main__mob"></div>
+                <h2>My skills</h2>
             </a>
-            <h2>My skills</h2>
             <div class="main__container">
                 <div class="skills__html">
                     <div class="skills__html__logo main__logo"></div>
@@ -91,8 +89,10 @@
             </div>
         </section>
         <section class="my-works">
-            <a href="works.html"><div class="main__mob"></div></a>
-            <h2>My works</h2>
+            <a href="works.html">
+                <div class="main__mob"></div>
+                <h2>My works</h2>
+            </a>
             <div class="works">
                 <div class="work-1"></div>
                 <div class="work-2"></div>
