--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
             <div class="main__mob"></div>
             <h2>About me</h2>
             <div class="about-me main__container">
-                <div class="about__ava main__logo"></div>
+                <div class="about__ava main__logo"style="width: 100px"></div>
                 <div class="about__text main__text">
                     Hello! I'm a creative front-end developer who looking for interesting projects.
                     I will develop your website at its best!
@@ -66,7 +66,7 @@
             <p>Contact me</p>
         </button>
         <div id="popup" class="footer__popup">
-            <form class="footer__contact animate">
+            <form class="footer__contact animate" action="https://formspree.io/xgenppvb" method="post">
                 <span onclick="document.getElementById('popup').style.display='none'" class="close-btn" title="Close window">×</span>
                 <h1>Contact me</h1>
                 <div class="footer__form__container">
