--- a/contact.html
+++ b/contact.html
@@ -44,12 +44,14 @@
     </header>
     <p class="header__p">I will always be glad to cooperate with you</p>
     <main>
-        <h2>Contact me</h2>
-        <div class="main__contact">
-            <p>Message</p>
-            <textarea rows="7" placeholder="Type message..."></textarea><br>
-            <button class="send-button">Send</button>
-        </div>
+        <form class="main__contact animate" action="https://formspree.io/xgenppvb" method="post">
+            <h2>Contact me</h2>
+            <!-- <div class="main__contact"> -->
+                <p>Message</p>
+                <textarea rows="17" placeholder="Type message..."></textarea><br>
+                <button class="send-button">Send</button>
+            <!-- </div> -->
+        </form>
     </main>
     <footer>
         <!-- <button class="footer__button" onclick="document.getElementById('popup').style.display='block'" style="width:auto;">
