--- a/RU/about.html
+++ b/RU/about.html
@@ -51,7 +51,7 @@
             <div class="main__mob"></div>
             <h2>Обо мне</h2>
             <div class="about-me main__container">
-                <div class="about__ava main__logo"></div>
+                <div class="about__ava main__logo" style="width: 100px"></div>
                 <div class="about__text main__text">
                     Здравствуйте! Я креативный frontend разработчик в поиске интерестных проектов. Я создам для вас наилучший веб-сайт! Готова сотрудничать на условиях фриланса и уже с нетерпением жду нашего сотрудничества!
                 </div>
@@ -65,7 +65,7 @@
             <p>Связаться со мной</p>
         </button>
         <div id="popup" class="footer__popup">
-            <form class="footer__contact animate" action="mailto:linko8537@gmail.com?subject=" Message from BCWebsite" method="post" enctype="text/plain">
+            <form class="footer__contact animate" action="https://formspree.io/xgenppvb" method="post">
                 <span onclick="document.getElementById('popup').style.display='none'" class="close-btn" title="Close window">×</span>
                 <h1>Связаться со мной</h1>
                 <div class="footer__form__container">
