--- a/RU/contact.html
+++ b/RU/contact.html
@@ -47,11 +47,11 @@
     <p class="header__p">С нетерпением жду сотрудничества с вами</p>
     <main>
         <h2>Связаться со мной</h2>
-        <div class="main__contact">
+        <form class="main__contact animate" action="https://formspree.io/xgenppvb" method="post">
             <p>Сообщение</p>
             <textarea rows="7" placeholder="Type message..."></textarea><br>
             <button class="send-button">Отправить</button>
-        </div>
+        </form>
     </main>
     <footer>
         <!-- <button class="footer__button" onclick="document.getElementById('popup').style.display='block'" style="width:auto;">
@@ -60,7 +60,7 @@
             <p>Contact me</p>
         </button>
         <div id="popup" class="footer__popup">
-            <form class="footer__contact animate">
+            <form class="footer__contact animate" action="https://formspree.io/xgenppvb" method="post">
                 <span onclick="document.getElementById('popup').style.display='none'" class="close-btn" title="Close window">×</span>
                 <h1>Contact me</h1>
                 <div class="footer__form__container">
