--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <p>Contact me</p>
         </button>
         <div id="popup" class="footer__popup">
-            <form class="footer__contact animate" action="mailto:linko8537@gmail.com?subject=" Message from BCWebsite" method="post" enctype="text/plain">
+            <form class="footer__contact animate" action="https://formspree.io/xgenppvb" method="post">
                 <span onclick="document.getElementById('popup').style.display='none'" class="close-btn" title="Close window">×</span>
                 <h1>Contact me</h1>
                 <div class="footer__form__container">
